dashboard corrections and DON Received